log
Thu 16 May 2024 09:08:31 PM UTC: 
 tests:  0|5
total_score: 0/70
ace7bbc
Thu 16 May 2024 09:19:35 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|5
total_score: 0/70
0bafe1a
Thu 16 May 2024 09:23:27 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:20: error: expected expression before ‘int’
   61 |             while (int k != 9){
      |                    ^~~
sudoku.c:65:16: error: ‘k’ undeclared (first use in this function)
   65 |                k++
      |                ^
sudoku.c:65:16: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:65:19: error: expected ‘;’ before ‘}’ token
   65 |                k++
      |                   ^
      |                   ;
   66 |             }
      |             ~      
Compilation failed
f42f87f
Thu 16 May 2024 09:23:47 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
565d98b
Thu 16 May 2024 09:28:47 PM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
sudoku.c: In function ‘is_final’:
sudoku.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
01f52fb
Thu 16 May 2024 09:29:00 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
91875be
